@@ -1,3 +1,9 @@
+2004-08-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b102
+
+	* Add: block-Random_Image.php.sample for phpnuke
+
+	* Change: Added gpl.txt to phpBB2/modules.php
+
 2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b101
 
         * Fix: Print fatal error message instead of obscure PHP error
